Grease Pencil AutoMerge does not work when Draw Strokes On Back is enabled #94620

Closed
opened 2022-01-04 00:19:21 +01:00 by Matthew Gafford · 5 comments

Operating system: Win10
Graphics card: RTX3070

Blender Version
Broken: 3.0
Worked: N/A

image.png
image.png

When Draw Strokes On Back is enabled, Automerge Strokes does not work, except for randomly merging the stroke with itself even if the ends are really far away.

I created a new GP Stroke object and tried it in a brand new file, and the problem is still there.

Operating system: Win10 Graphics card: RTX3070 **Blender Version** Broken: 3.0 Worked: N/A ![image.png](https://archive.blender.org/developer/F12787587/image.png) ![image.png](https://archive.blender.org/developer/F12787593/image.png) When Draw Strokes On Back is enabled, Automerge Strokes does not work, except for randomly merging the stroke with itself even if the ends are really far away. I created a new GP Stroke object and tried it in a brand new file, and the problem is still there.

Added subscriber: @AFoxInSpace

Added subscriber: @AFoxInSpace

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2022-01-04 16:44:50 +01:00

This issue was referenced by 29c4c78a38

This issue was referenced by 29c4c78a38964408f685b7f6e18ff5a1451ef1d6

This issue was referenced by 55842b4244

This issue was referenced by 55842b424477e8eed1756a28bdd82666e484c5a3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94620
No description provided.