Fix T94620: GPencil AutoMerge does not work when Draw On Back is enabled

The problem was the stroke was added to head and the `prev` pointer was NULL. Now check if there is the list is empty`next`.